fixed cards jumping on load

--- a/src/components/PortfolioCard/PortfolioCard.scss
+++ b/src/components/PortfolioCard/PortfolioCard.scss
@@ -20,6 +20,7 @@
   .card-img-top {
     max-height: 196px;
     border-radius: 0%;
+    height: 200px;
   }
 
   .portfolio-btn {
